<resources>
    <string name="app_name">exam</string>
    <string name="hello_string">Hello</string>
    <string name="string_item_price">item_price</string>
    <string name="string_item_name">item_name</string>
    <string name="string_ok">ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_task">任务</string>
    <string name="title_award">奖励</string>
    <string name="title_statistics">统计</string>
    <string name="title_my">我的</string>
    <string name="title_app">ZHJ-Todo</string>
    <string name="add_task">添加任务</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="task_title">任务标题</string>
    <string name="task_score">任务分数</string>
    <string name="finish">完成</string>
    <string name="modify_task">修改任务</string>
    <string name="delete_task">删除任务</string>
    <string name="add_award">添加奖励</string>
    <string name="award_title">奖励标题</string>
    <string name="award_score">奖励分数</string>
    <string name="settings">设置</string>
    <string name="add_first_task">点击右下方加号以添加第一个任务</string>
    <string name="add_first_award">点击右下方加号以添加第一个奖励</string>
    <string name="manual_sort">手动排序</string>
    <string name="more">更多</string>
    <string name="sort">排序</string>
    <string name="share">分享</string>
    <string name="history">历史</string>
    <string name="completion_trend">完成趋势</string>
    <string name="show_7_completion_trend">展示了前7天的完成趋势</string>
    <string name="navigation_drawer_open">打开抽屉式菜单</string>
    <string name="navigation_drawer_close">关闭抽屉式菜单</string>
    <string name="sign_in">签到</string>
    <string name="daily_points_number">每日积分数量</string>
    <string name="show_7_points_number">展示了前7天的积分数量</string>
    <string name="points_distribution">积分分布</string>
    <string name="show_7_points_distribution">展示前7天的积分分布情况</string>
    <string name="example_text">当前为示例数据</string>
    <string name="data_not_enough">数据量过少，再使用六天吧</string>
    <string name="completion_tasks">完成任务数</string>
    <string name="ten">10</string>
    <string name="compare_to_yesterday">相比昨天</string>
    <string name="completed_awards">完成奖励数</string>
    <string name="add_10_percent">+10%</string>
    <string name="all">全部</string>
    <string name="not_group">未分组</string>
    <string name="new_group">新建分组</string>
    <string name="delete_group">删除分组</string>
    <string name="add_group_list">新建分组清单</string>
    <string name="group_name">清单名称</string>
    <string name="group">分组</string>
    <string name="whether_group">是否分组</string>
    <string name="concentrate">专注</string>
    <string name="tap_to_input_event">轻触输入专注事件</string>
    <string name="start_concentrate">开始专注</string>
    <string name="science_of_25_minutes">科学建议：专注时长25分钟，休息时长5分钟</string>
    <string name="focusing">专注中</string>
    <string name="today_gain">今日收成 0</string>
    <string name="during_date">持续日期至</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="choose_date">选择日期</string>
    <string name="no_date">没有日期</string>
    <string name="no">无</string>
    <string name="importance">重要程度</string>
    <string name="normal">一般</string>
    <string name="important">重要</string>
    <string name="urgant">紧急</string>
    <string name="points">当前积分</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="update">版本更新</string>
    <string name="share_to_friends">推荐给好友</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account_and_security">账户与安全</string>
    <string name="settings_normal">常规</string>
    <string name="module">功能模块</string>
    <string name="event">事件</string>
    <string name="recognition">智能识别</string>
    <string name="wechat_reminder">微信消息提醒</string>
    <string name="user_record">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="personalized_service">个性化服务</string>
    <string name="Todo_academy">Todo学院</string>
    <string name="open_now">立即开通</string>
    <string name="choose_more">多选</string>
    <string name="cloud_sync">云同步</string>
    <string name="scan">扫一扫</string>
    <string name="search">搜索</string>
    <string name="github_web">Github主页</string>
    <string name="title_activity_search">ActivitySearch</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sort_by_name">按照名称排序</string>
    <string name="sort_by_date">按照日期排序</string>
    <string name="sort_by_importance">按照重要程度排序</string>
    <string name="title_activity_account_and_security">Account_and_Security_Activity</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="phone_number">手机号</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="avater">头像</string>
    <string name="free_version">免费版</string>
    <string name="open_premium_account">开通高级账户</string>
    <string name="title_activity_normal_settings">NormalSettingsActivity</string>
    <string name="sound_effect">音效</string>
    <string name="shake">震动</string>
    <string name="language">语言</string>
    <string name="title_activity_modules">ModulesActivity</string>
    <string name="schedule_overview_module">日程概览模块</string>
    <string name="title_activity_events_settings">EventsSettingsActivity</string>
    <string name="Day_Todo">Day Todo</string>
    <string name="weekly_view_progress_show">周视图进度显示</string>
    <string name="month_calendar_mark_show">月日历标记显示</string>
    <string name="week_start">星期开始于</string>
    <string name="subscribe_calendar">订阅日历</string>
    <string name="events_settings">事件设置</string>
    <string name="show_completed_events">显示已完成事件</string>
    <string name="show_completed_delete_line">显示已完成删除线</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_recognition_settings">RecognitionSettingsActivity</string>
    <string name="natural_language_recognition">自然语义识别</string>
    <string name="auto_remove_date_and_time">自动移除日期与时间</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_wechat_reminder_settings">WechatReminderSettingsActivity</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="not_bind_wechat">未绑定微信</string>
    <string name="finish_bind_wechat">已绑定微信</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_personalized_service_settings">
        PersonalizedServiceSettingsActivity
    </string>
    <string name="not_open_personalized">未开启个性化服务</string>
    <string name="open_personalized_service">开启个性化服务</string>
    <string name="user_agreement">
        <![CDATA[
            <h1>用户协议</h1>
            <br/>
            <p>尊敬的用户，欢迎您注册成为本应用的用户。在注册前，请您详细阅读以下协议：</p>
            <br/>
            <h2>一、账号注册</h2>
            <p>1、用户在使用本服务前需要注册一个账号。账号应当使用手机号码绑定注册，请用户使用尚未与账号绑定的手机号码，以及未被服务根据本协议封禁的手机号码注册账号。服务可以根据用户需求或产品需要对账号注册和绑定的方式进行变更，而无须事先通知用户。</p>
            <p>2、用户注册时应当授权及使用其个人信息方可成功注册账号。故用户完成注册即表明用户同意服务提取、公开及使用用户的信息。</p>
            <p>3、鉴于账号的绑定注册方式，您同意服务在注册时将允许您的手机号码及手机设备识别码等信息用于注册。</p>
            <p>4、在用户注册及使用本服务时，需要搜集能识别用户身份的个人信息以便服务可以在必要时联系用户，或为用户提供更好的使用体验。搜集的信息包括但不限于用户的姓名、地址；同意对这些信息的使用将受限于第三条用户个人隐私信息保护的约束。</p>
            <br/>
            <h2>二、用户个人隐私信息保护</h2>
            <p>1、如果发现或收到他人举报或投诉用户违反本协议约定的，有权不经通知随时对相关内容，包括但不限于用户资料、发贴记录进行审查、删除，并视情节轻重对违规账号处以包括但不限于警告、账号封禁 、设备封禁 、功能封禁 的处罚，且通知用户处理结果。</p>
            <p>2、因违反用户协议被封禁的用户，可以自行与联系。其中，被实施功能封禁的用户会在封禁期届满后自动恢复被封禁功能。被封禁用户可提交申诉，将对申诉进行审查，并自行合理判断决定是否变更处罚措施。</p>
            <p>3、用户理解并同意，有权依合理判断对违反有关法律法规或本协议规定的行为进行处罚，对违法违规的任何用户采取适当的法律行动，并依据法律法规保存有关信息向有关部门报告等，用户应承担由此而产生的一切法律责任。</p>
            <p>4、用户理解并同意，因用户违反本协议约定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户应当赔偿与合作公司、关联公司，并使之免受损害。 </p>
            <br/>
            <h2>三、用户发布内容规范</h2>
            <p>1、本条所述内容是指用户使用服务的过程中所制作、上载、复制、发布、传播的任何内容，包括但不限于账号头像、名称、用户说明等注册信息及认证资料，或文字、语音、图片、视频、图文等发送、回复或自动回复消息和相关链接页面，以及其他使用账号或本服务所产生的内容。</p>
            <p>2、用户不得利用账号或本服务制作、上载、复制、发布、传播如下法律、法规和政策禁止的内容：</p>
            <p>(1) 反对宪法所确定的基本原则的；</p>
            <p>(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；</p>
            <p>(3) 损害国家荣誉和利益的；</p>
            <p>(4) 煽动民族仇恨、民族歧视，破坏民族团结的；</p>
            <p>(5) 任何包含对种族、性别、宗教、地域内容等歧视的；</p>
            <p>(6) 捏造或者歪曲事实，散布谣言，扰乱社会秩序的；</p>
            <p>(7) 宣扬封建迷信、淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；</p>
            <p>(8) 侮辱或者诽谤他人，侵害他人合法权益的；</p>
            <p>(9) 含有法律、行政法规禁止的其他内容的信息。</p>
            <p>3、用户不得利用账号或本服务制作、上载、复制、发布、传播如下干扰正常运营，以及侵犯其他用户或第三方合法权益的内容：</p>
            <p>(1) 含有任何性或性暗示的；</p>
            <p>(2) 含有辱骂、恐吓、威胁内容的；</p>
            <p>(3) 含有骚扰、垃圾广告、恶意信息、诱骗信息的；</p>
            <p>(4) 涉及他人隐私、个人信息或资料的；</p>
            <p>(5) 侵害他人名誉、权利、安全或合法权益的；</p>
            <p>(6) 含有其他干扰本服务正常运营和侵犯其他用户或第三方合法权益内容的信息。</p>
            <br/>
            <h2>四、使用规则</h2>
            <p>1、用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表的观点、立场或政策，对此不承担任何责任。</p>
            <p>2、用户不得利用账号或本服务进行如下行为：</p>
            <p>(1) 提交、发布虚假信息，或冒充、利用他人名义的；</p>
            <p>(2) 强制、诱导其他用户关注、点击链接页面或分享信息的；</p>
            <p>(3) 虚构事实、隐瞒真相以误导、欺骗他人的；</p>
            <p>(4) 利用技术手段批量建立虚假账号的；</p>
            <p>(5) 利用账号或本服务从事任何违法犯罪活动的；</p>
            <p>(6) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；</p>
            <p>(7) 其他违反法律法规规定、侵犯其他用户合法权益、干扰服务正常运营或服务未明示授权的行为。</p>
            <p>3、用户须对利用账号或本服务传输信息的行为承担法律责任。用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表的观点、立场或政策，对此不承担任何责任。</p>
            <p>如因此给或第三方造成损害的，用户应当依法予以赔偿。</p>
            <p>4、提供的服务中可能包括广告，用户同意在使用过程中显示和第三方供应商、合作伙伴提供的广告。除法律法规明确规定外，用户应自行对依该广告信息进行的交易负责，对用户因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，不承担任何责任。</p>
            <br/>
            <h2>五、其他</h2>
            <p>1、郑重提醒用户注意本协议中免除责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。未成年人应在法定监护人的陪同下阅读本协议。</p>
            <p>2、本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交住所地有管辖权的人民法院管辖。</p>
            <p>3、软件内订阅增值类服务的购买，无法进行退款，如有特殊需要请联系客服解决。</p>
            <p>4、本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。</p>
        ]]>
    </string>
</resources>