<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/ic_add_task"
        android:title="@string/title_task" />

    <item
        android:id="@+id/navigation_award"
        android:icon="@drawable/ic_add_award"
        android:title="@string/title_award" />

    <item
        android:id="@+id/navigation_concentrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_timer"
        android:title="@string/concentrate" />
    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/title_statistics" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_my"
        android:title="@string/title_my" />

</menu>