<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/award_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/award_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/award_score">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/award_points_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 其他选项和设置可以根据您的需求添加 -->

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_box_award_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/whether_group" />

        <Spinner
            android:id="@+id/spinner_award_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false" />


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/during_date"
            android:textColor="@color/black" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_today"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:text="@string/today"
                android:textColor="@color/gray"
                app:checkedIconEnabled="false"
                app:chipCornerRadius="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:text="@string/tomorrow"
                android:textColor="@color/gray"
                app:checkedIconEnabled="false"
                app:chipCornerRadius="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/choose_date"
                android:textColor="@color/gray"
                app:checkedIconVisible="false"
                app:chipCornerRadius="16dp"
                app:chipIcon="@drawable/ic_calendar"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/no"
                android:textColor="@color/gray"
                app:checkedIconEnabled="false" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/submit_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:minWidth="200dip"
        android:text="@string/finish"
        android:textSize="16sp" />

</LinearLayout>
