<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group_list"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <EditText
        android:id="@+id/input_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:hint="@string/group_name"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_close" />

    <Button
        android:id="@+id/create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_group_name"
        android:layout_alignParentEnd="true"
        android:text="@string/new_group" />

</RelativeLayout>
