<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/gray"
            android:cropToPadding="false"
            android:minHeight="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/sort"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_title_gray"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/sort_by_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/sort_by_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/importance_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_warning_gray"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/sort_by_importance"
            android:textColor="@color/black" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>